# jpcd-home

./: .gitignore  Cargo.toml  README.md  package-lock.json
jpcd-yew/: .gitignore  Cargo.toml  LICENSE-MIT  README.md  conway.css  index.css  index.html  index.scss
jpcd-yew/src/: app.rs  conway_page.rs  main.rs
jpcd-yew/src/pages/: conway.rs  mod.rs  sorting_algos.rs
jpcd-yew/src/stylesheets/: conway.css  index.css  sorting.css
js-wasm/: .gitignore  LICENSE_MIT
js-wasm/www/: index.html  package.json
src/: lib.rs
www/: index.html  index.js  package-lock.json
